Wrapping up Platform feature initial setup